<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <TextView
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/username"
            />
        <EditText
            android:id="@+id/newUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/Username"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/usernamePlaceholder"
            android:ems="10"
            android:autofillHints="enter a username"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="@id/newUserPassword"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/Username"
            app:layout_constraintTop_toBottomOf="@id/Username" />

        <EditText
            android:id="@+id/newUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="enter password"
            android:ems="10"
            android:hint="@string/passwordPlaceholder"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/newUsername"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintLeft_toRightOf="@id/Password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Password" />

        <TextView
            android:id="@+id/Verify"
            android:layout_width="wrap_content"
            android:layout_height="@id/verifyPassword"
            android:layout_marginTop="20dp"
            android:text="@string/reenter"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/Password"
            app:layout_constraintTop_toBottomOf="@id/Password" />

        <EditText
            android:id="@+id/verifyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="re-enter password"
            android:ems="10"
            android:hint="@string/reenterPlaceholder"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/newUserPassword"
            app:layout_constraintLeft_toRightOf="@id/Verify"
            app:layout_constraintTop_toTopOf="@+id/Verify" />

        <TextView
            android:id="@+id/allergens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/allergensPlainText"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Verify" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputFoodItem"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/placeholderAllergen"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/addAllergen"
            app:layout_constraintStart_toStartOf="@+id/Verify"
            app:layout_constraintTop_toBottomOf="@+id/allergens" />

        <Button
            android:id="@+id/addAllergen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/AddFoodButtonText"
            app:layout_constraintEnd_toEndOf="@+id/verifyPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputFoodItem" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newUserRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            android:background="@android:drawable/editbox_background"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/textInputFoodItem"
            app:layout_constraintTop_toBottomOf="@+id/textInputFoodItem">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registerNewUser"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUserRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>