<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FridgePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fridgeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:background="@android:drawable/editbox_background"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/textInputFoodItem"
            app:layout_constraintTop_toBottomOf="@+id/myFridge">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/myFridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fridge_main_desc"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fridgeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/firstPageDesc1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fridgeRecyclerView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputFoodItem"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:hint="@string/exampleFood"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fridgeDescription"
            app:layout_constraintTop_toBottomOf="@+id/fridgeDescription" />

        <Button
            android:id="@+id/addFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/addFoodToFridgeButtonText"
            app:layout_constraintStart_toStartOf="@+id/textInputFoodItem"
            app:layout_constraintTop_toBottomOf="@+id/textInputFoodItem" />

        <Button
            android:id="@+id/moveFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/moveToGroceryButtonText"
            app:layout_constraintEnd_toEndOf="@+id/textInputFoodItem"
            app:layout_constraintTop_toTopOf="@+id/addFood" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/backToHomeButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addFood" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>