<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScrollableRecipePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/RecipePageHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondPageHeader"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prepTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recipe_desc"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecipePageHeader" />

        <TextView
            android:id="@+id/cookTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recipe_desc"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prepTimeText" />

        <TextView
            android:id="@+id/ingredientsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ingredients"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cookTimeText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/editbox_background"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/RecipePageHeader"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsText">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/stepsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/stepsText"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/prepTimeText"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsRecyclerView" />

        <TextView
            android:id="@+id/displayStepsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stepsText"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/recipesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/backToRecipesButtonText"
            app:layout_constraintStart_toStartOf="@+id/RecipePageHeader"
            app:layout_constraintTop_toBottomOf="@+id/displayStepsText" />

        <!--        Add the same thing you did for the fridge and make cards here. Put a card creator function in the Globals Object -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>